--- a/index.html
+++ b/index.html
@@ -68,11 +68,15 @@
       </li>
       <li>
         <strong>Cycle Data:</strong> Daily physiological cycle information
-        including strain and sleep data
+        including strain and average heart rate data
       </li>
       <li>
-        <strong>User Profile:</strong> Basic profile information (name, email)
-        as provided by WHOOP
+        <strong>Sleep Data:</strong> Sleep duration, sleep stages, sleep efficiency,
+        and sleep-related metrics
+      </li>
+      <li>
+        <strong>Workout Data:</strong> Workout information including activity type,
+        duration, and accumulated strain
       </li>
     </ul>
 
@@ -80,7 +84,8 @@
     <p>Your WHOOP data is used exclusively for the following purposes:</p>
     <ul>
       <li>
-        Generating personalized workout recommendations based on recovery scores
+        Generating personalized workout recommendations based on recovery scores,
+        sleep quality, and workout history
       </li>
       <li>Creating automated daily briefings and health summaries</li>
       <li>Triggering workflow automations based on recovery status</li>
@@ -155,11 +160,10 @@
     <ul>
       <li>
         <strong>WHOOP API:</strong> For accessing your health data. Subject to
-        
+        <a
           href="https://www.whoop.com/us/en/full-privacy-policy/"
           target="_blank"
-          >WHOOP's Privacy Policy</a
-        >
+          >WHOOP's Privacy Policy</a>
       </li>
       <li>
         <strong>n8n (or similar workflow automation):</strong> For processing
