--- a/index.html
+++ b/index.html
@@ -159,11 +159,7 @@
     <p>This App relies on the following third-party services:</p>
     <ul>
       <li>
-        <strong>WHOOP API:</strong> For accessing your health data. Subject to
-        <a
-          href="https://www.whoop.com/us/en/full-privacy-policy/"
-          target="_blank"
-          >WHOOP's Privacy Policy</a>
+        <strong>WHOOP API:</strong> For accessing your health data. Subject to <a href="https://www.whoop.com/us/en/full-privacy-policy/" target="_blank">WHOOP's Privacy Policy</a>
       </li>
       <li>
         <strong>n8n (or similar workflow automation):</strong> For processing
